# Prism

./: .gitignore  Cargo.toml  TODO.md  TODO.txt  semantics idee.txt
fuzz/: Cargo.toml
fuzz/fuzz_targets/: type_checker.rs
jonla-compiler/: Cargo.toml
jonla-compiler/resources/: church_and.jl  church_wrapper.jl  grammar  grammar.jonla_peg  grammar2  grammar_new  meta.grammar  program.jl  program.jnl
jonla-compiler/resources_example/: grammar  program.jnl
jonla-compiler/src/: build.rs  lib.rs  main.rs
jonla-compiler/src/coc/: beta.rs  env.rs  mod.rs  type_check.rs
jonla-compiler/tests/: coc_test.rs
jonla-parser/: Cargo.toml
jonla-parser/resources/: bootstrap.bincode  bootstrap.json  meta.grammar
jonla-parser/src/: character_class.rs  from_action_result.rs  grammar.rs  lib.rs  parse_error.rs  parse_pair.rs  parser_core.rs  parser_core_ast.rs  parser_core_expression.rs  parser_core_file.rs  span.rs
jonla-parser/src/action_result/: mod.rs
jonla-parser/src/arena/: mod.rs
jonla-parser/src/core/: adaptive.rs  cache.rs  context.rs  mod.rs  parser.rs  pos.rs  presult.rs  primitives.rs  recovery.rs  span.rs  stream.rs  toposet.rs
jonla-parser/src/error/: empty_error.rs  error_printer.rs  mod.rs  set_error.rs  tree_error.rs
jonla-parser/src/grammar/: action_result.rs  apply_action.rs  escaped_string.rs  from_action_result.rs  grammar.rs  grammar_ar.rs  mod.rs  parser_instance.rs  parser_layout.rs  parser_rule.rs  parser_rule_body.rs  parser_rule_expr.rs  run.rs
jonla-parser/src/parser/: mod.rs  parser_instance.rs  parser_layout.rs  parser_rule.rs  parser_rule_body.rs  parser_rule_expr.rs
jonla-parser/src/parser_core/: adaptive.rs  cache.rs  context.rs  error.rs  mod.rs  parser.rs  parser_cache.rs  parser_state.rs  presult.rs  primitives.rs  recovery.rs  span.rs  stream.rs  toposet.rs
jonla-parser/src/parser_sugar/: action_result.rs  apply_action.rs  error_printer.rs  mod.rs  parser_context.rs  parser_layout.rs  parser_rule.rs  parser_rule_body.rs  parser_rule_expr.rs  run.rs
jonla-parser/src/rule_action/: action_result.rs  apply_action.rs  mod.rs
jonla-parser/tests/parser/: adaptive.rs  infinite.rs  lambda.rs  layout.rs  left_recursion.rs  list.rs  literal.rs  lookahead.rs  minor.rs  mod.rs  parametric.rs  parser_tests.rs  recovery.rs  repeat.rs
prism-compiler/: Cargo.toml  README.md
prism-compiler/programs/: id_fun2.test  id_fun3.test  id_fun8.test  let10.test  let11.test  let3.test  let6.test  let8.test  let9.test  let_reduce1.test
prism-compiler/programs/eval/: let_reduce.in
prism-compiler/programs/ok/: adapt.test  adapt_capture1.test  adapt_capture10.test  adapt_capture2.test  adapt_capture3.test  adapt_capture4.test  adapt_capture5.test  adapt_capture6.test  adapt_capture7.test  adapt_capture8.test  adapt_capture9.test  adapt_eval1.test  adapt_eval3.test  adapt_eval4.test  adapt_let1.test  adapt_let2.test  adapt_let3.test  adapt_let4.test  adapt_let5.test  adapt_let6.test  adapt_simple.test  adapt_vars.test  church_bools.test  church_bools_and_or.test  church_bools_infer.test  church_nats  church_nats.test  dependent_pair.test  free1.test  free2.test  free3.test  free5.test  free6.test  id_fun1.test  id_fun2.test  id_fun3.test  id_fun4.test  id_fun5.test  id_fun6.test  id_fun7.test  (+17 more)
prism-compiler/programs/tc/: fn_construct.in
prism-compiler/programs/todo/: adapt_capture1.test  adapt_capture3.test  adapt_capture7.test  adapt_let1.test  adapt_let2.test  adapt_let3.test  adapt_let5.test  adapt_let6.test  church_bools_and_or.test  list.test
prism-compiler/programs/type_check_fails/: breaks_label_values.test  infinite_type.test  missing_name_complex.test  type_type.test  weird1.test  weird2.test  weird4.test  weird5.test  weird6.test
prism-compiler/programs_new/: let2.pr
prism-compiler/resources/: church_bools_and_or_experiment.pr  demo1.pr  demo2.pr  demo3.pr  demo4.pr  dependent_pair.pr  failing_deppair.pr  grammar  prism.pg  program.full  program.pr  simple.pr  test.pg
prism-compiler/src/: lib.rs  main.rs  parser.rs  union_find.rs
prism-compiler/src/coc/: arbitrary.rs  beq.rs  beta.rs  beta_reduce.rs  beta_reduce_head.rs  br.rs  brh.rs  brh_expr.rs  display.rs  env.rs  eq.rs  error.rs  exhaustive.rs  expect_beq.rs  from_action_result.rs  is_beta_equal.rs  mod.rs  shift_free.rs  simplify.rs  sm.rs  type_check.rs
prism-compiler/src/desugar/: display.rs  from_action_result.rs  mod.rs
prism-compiler/src/interp/: is_beta_equal.rs  mod.rs
prism-compiler/src/lang/: beta_reduce.rs  beta_reduce_head.rs  display.rs  env.rs  error.rs  exhaustive.rs  expect_beq.rs  expect_beq_internal.rs  from_action_result.rs  from_parse_env.rs  grammar.rs  is_beta_equal.rs  mod.rs  parsable.rs  simplify.rs  type_check.rs
prism-compiler/src/parser/: display.rs  mod.rs  named_env.rs  parse_env.rs  parse_expr.rs  (+1 more)
prism-compiler/tests/: beta_eq_edgecases.rs  beta_reduce.rs  beta_reduce_head.rs  br.rs  brh.rs  coc_test.rs  exhaustive.rs  expect_beta_eq.rs  parse.rs  simplify.rs  sm.rs  tc.rs  type_check.rs  type_check_new.rs
prism-compiler/uitests/: type_type.pr
prism-parser/: Cargo.toml  README.md
prism-parser-bootstrap/: Cargo.toml
prism-parser-bootstrap/resources/: meta.grammar  meta.pg
prism-parser-bootstrap/src/: main.rs
prism-parser-bootstrap/tests/: test_bootstrap.rs
prism-parser/resources/: bootstrap.bincode  bootstrap.json  bootstrap.msgpack  meta.pg
prism-parser/src/: lib.rs
prism_compiler/: Cargo.toml  README.md
prism_compiler/resources/: dependent_pair.pr  simple.pr  thing.pr
prism_compiler/src/: args.rs  lib.rs  main.rs
prism_compiler/tests/: beta_reduce.rs  beta_reduce_head.rs  exhaustive.rs  parse.rs  simplify.rs  type_check.rs  type_check_new.rs  uitest.rs
prism_compiler/uitests/: type.pr  type_type.pr  type_type.stderr
prism_diag_derive/: Cargo.toml
prism_diag_derive/src/: lib.rs
prism_parser/: Cargo.toml  README.md
prism_parser/resources/: bootstrap.json  bootstrap.msgpack
prism_parser/src/: lib.rs
test-lang/: Cargo.toml
test-lang/resources/: grammar  program
test-lang/src/: build.rs  main.rs
(+666 files in other folders)
