[workspace]
members = ["prism-compiler", "prism-lsp", "prism-parser", "prism-parser-bootstrap"]
default-members = ["prism-compiler", "prism-lsp", "prism-parser"]
resolver = "3"

[workspace.package]
edition = "2024"
version = "0.2.0"
authors = ["Jonathan Brouwer <jonathantbrouwer@gmail.com>"]
license = "MPL-2.0"

[workspace.dependencies]
# Internal
prism-parser = { path = "./prism-parser" }
prism-compiler = { path = "./prism-compiler" }

# External
clap = { version = "4.5", default-features = false, features = ["help", "usage", "error-context", "std", "derive"] }
serde = { version = "1.0", features = ["derive", "std", "rc"] }
serde_json = "1.0"
ariadne = "0.5"
test_each_file = "0.3"
rmp-serde = "1.3"
tower-lsp-server = "0.21.0"
tokio = { version = "1.44.1", default-features = false, features = ["macros", "rt-multi-thread", "io-std"] }