[workspace]
members = ["prism_compiler", "prism_diag", "prism_diag_derive", "prism_input", "prism_lsp", "prism_parser", "prism_parser_bootstrap"]
default-members = ["prism_compiler", "prism_lsp", "prism_parser", "prism_parser_bootstrap"]
resolver = "3"

[workspace.package]
edition = "2024"
version = "0.2.0"
authors = ["Jonathan Brouwer <jonathantbrouwer@gmail.com>"]
license = "MPL-2.0"

[workspace.dependencies]
# Internal
prism_parser = { path = "prism_parser" }
prism_input = { path = "prism_input" }
prism_compiler = { path = "prism_compiler" }
prism_diag = { path = "prism_diag" }
prism_diag_derive = { path = "prism_diag_derive" }

# External
clap = { version = "4.5", default-features = false, features = ["help", "usage", "error-context", "std", "derive"] }
serde = { version = "1.0", features = ["derive", "std", "rc"] }
serde_json = "1.0"
test_each_file = "0.3"
rmp-serde = "1.3"
tower-lsp-server = "0.23"
tokio = { version = "1.49", default-features = false, features = ["macros", "rt-multi-thread", "io-std"] }
ui_test = { version = "0.30", default-features = false, features = ["indicatif"] }
annotate-snippets = "0.12"
synstructure = "0.13.2"
syn = "2.0.112"
quote = "1.0.42"
proc-macro2 = "1.0.104"