[package]
name = "prism-compiler-fuzz"
version = "0.0.0"
publish = false
edition = "2021"

[package.metadata]
cargo-fuzz = true

[dependencies]
libfuzzer-sys = "0.4"

[dependencies.prism-compiler]
path = "../prism-compiler"

[[bin]]
name = "type_checker"
path = "fuzz_targets/type_checker.rs"
test = true
doc = false
bench = false
