[package]
name = "jonla-compiler"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
itertools = "0.10.3"
thiserror = "1.0.31"
jonla-parser = { path = "../jonla-parser" }

[build-dependencies]
peg = "0.8.0"
itertools = "0.10.3"
thiserror = "1.0.31"
quote = "1.0.18"
jonla-parser = { path = "../jonla-parser" }