[package]
name = "jonla-compiler"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
itertools = "0.10.5"
thiserror = "1.0.37"
jonla-parser = { path = "../jonla-parser" }

[build-dependencies]
peg = "0.8.1"
itertools = "0.10.5"
thiserror = "1.0.37"
quote = "1.0.21"
jonla-parser = { path = "../jonla-parser" }
