[package]
name = "jonla-parser"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
peg = "0.8.0"
itertools = "0.10.3"
thiserror = "1.0.31"
quote = "1.0.18"
proc-macro2 = "1.0.39"
serde = { version = "1.0.137", features = ["derive"] }
serde_json = "1.0.81"
lazy_static = "1.4.0"
ariadne = "0.1.5"
by_address = "1.0.4"