[package]
name = "jonla-parser"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
itertools = "0.10.5"
serde = { version = "1.0.149", features = ["derive", "rc"] }
bincode = "1.3.3"
ariadne = "0.1.5"
by_address = "1.1.0"
lazy_static = "1.4.0"
bumpalo = "3.11.1"