[package]
name = "prism-compiler"
description = "An adaptive and functional programming language"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
clap.workspace = true
prism-parser.workspace = true
rpds.workspace = true
ariadne.workspace = true
itertools.workspace = true

[dev-dependencies]
test_each_file.workspace = true
exhaustive.workspace = true
