[package]
name = "prism-compiler"
description = "An adaptive and functional programming language"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
clap.workspace = true
prism-parser.workspace = true
ariadne.workspace = true
bumpalo.workspace = true

[dev-dependencies]
test_each_file.workspace = true

[lints.clippy]
used_underscore_binding = "deny"