[package]
name = "prism-compiler"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
clap.workspace = true
prism-parser.workspace = true
prism-input.workspace = true
ariadne.workspace = true

[dev-dependencies]
test_each_file.workspace = true
ui_test.workspace = true

[[test]]
name = "type_check_new"
harness = false