[package]
name = "prism-parser-bootstrap"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
prism-parser = { path = "../prism-parser" }
serde = { version = "1.0.197", features = ["derive", "rc"] }
serde_json = "1.0.114"
bincode = "1.3.3"
