[package]
name = "prism-parser"
description = "A PEG parsing library built for the Prism programming language"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
serde.workspace = true
ariadne.workspace = true
bumpalo.workspace = true
bumpalo_try.workspace = true
rmp-serde.workspace = true

[lints.clippy]
used_underscore_binding = "deny"