[package]
name = "prism-parser"
description = "A PEG parsing library built for the Prism programming language"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
serde.workspace = true
ariadne.workspace = true
rmp-serde.workspace = true
log = "0.4.27"

[lints.clippy]
used_underscore_binding = "deny"