[package]
name = "prism-parser"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
serde.workspace = true
ariadne.workspace = true
rmp-serde.workspace = true
prism-input.workspace = true

[lints.clippy]
used_underscore_binding = "deny"