[package]
name = "prism_compiler"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
clap.workspace = true
prism_input.workspace = true
prism_diag.workspace = true
prism_diag_derive.workspace = true
prism_data_structures.workspace = true
unicode-ident.workspace = true

[dev-dependencies]
libtest-mimic.workspace = true

[[test]]
name = "uitest"
harness = false
