[package]
name = "prism_parser"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
serde.workspace = true
rmp-serde.workspace = true
prism_input.workspace = true
prism_diags.workspace = true

[lints.clippy]
used_underscore_binding = "deny"