[package]
name = "test-lang"
version = "0.1.0"
edition = "2021"
build = "src/build.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
peg = "0.8.0"
itertools = "0.10.3"
typed-arena = "2.0.1"
thiserror = "1.0.31"
quote = "1.0.18"
jonla-macros = { path = "../jonla-macros" }

[build-dependencies]
peg = "0.8.0"
itertools = "0.10.3"
typed-arena = "2.0.1"
thiserror = "1.0.31"
quote = "1.0.18"
jonla-macros = { path = "../jonla-macros" }